--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.3.3
+flask-session==0.5.0
 folium==0.14.0
-pandas==2.0.3
-plotly==5.15.0
-flask_session==0.5.0
+pandas==1.5.0
+plotly==5.0.0
